# MkManSynth

./: CMakeLists.txt
.github/workflows/: build.yml
NewProject/: NewProject.jucer
NewProject/Builds/VisualStudio2026/: MkManSynth.sln  MkManSynth_SharedCode.vcxproj  MkManSynth_SharedCode.vcxproj.filters  MkManSynth_StandalonePlugin.vcxproj  MkManSynth_VST3.vcxproj  MkManSynth_VST3ManifestHelper.vcxproj  NewProject.sln  NewProject_SharedCode.vcxproj  NewProject_StandalonePlugin.vcxproj  NewProject_VST3.vcxproj  NewProject_VST3ManifestHelper.vcxproj  resources.rc
NewProject/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
NewProject/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.h
